# ChangeLog for net-libs/ldns
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.59 2014/06/18 20:37:50 mgorny Exp $

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> ldns-1.6.16-r1.ebuild,
  ldns-1.6.17.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*ldns-1.6.17 (16 Jun 2014)

  16 Jun 2014; Tim Harder <radhermit@gentoo.org> +ldns-1.6.17.ebuild,
  metadata.xml:
  Version bump, add dane use flag.

*ldns-1.6.16-r1 (13 May 2014)

  13 May 2014; Michał Górny <mgorny@gentoo.org> +ldns-1.6.16-r1.ebuild:
  Convert to python-single-r1. Enable multilib support, bug #499384.

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> ldns-1.6.16.ebuild:
  Stable for alpha, wrt bug #505066

  14 Feb 2014; Akinori Hattori <hattya@gentoo.org> ldns-1.6.16.ebuild:
  ia64 stable wrt bug #477894

  09 Feb 2014; Fabian Groffen <grobian@gentoo.org> ldns-1.6.16.ebuild:
  Fixed for Prefix, marked ~x64-solaris, by Matthias Maier in bug #500362

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ldns-1.6.16.ebuild:
  Stable for sparc, wrt bug #477894

  23 Jan 2014; Joseph Jezak <josejx@gentoo.org> ldns-1.6.16.ebuild:
  Marked ppc/ppc64 stable as a dep for bug #477894.

  25 Dec 2013; Markus Meier <maekke@gentoo.org> ldns-1.6.16.ebuild:
  arm stable, bug #477894

  11 Dec 2013; Jeroen Roovers <jer@gentoo.org> ldns-1.6.16.ebuild:
  Stable for HPPA (bug #477894).

  11 Dec 2013; Jeroen Roovers <jer@gentoo.org> ldns-1.6.12.ebuild,
  ldns-1.6.16.ebuild, metadata.xml:
  Spelling.

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ldns-1.6.16.ebuild:
  Stable for x86, wrt bug #476036

  12 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ldns-1.6.16.ebuild:
  Stable for amd64, wrt bug #476036

  03 Mar 2013; Mike Frysinger <vapier@gentoo.org> ldns-1.6.16.ebuild:
  Add m68k/s390/sh lovin.

  03 Feb 2013; Tim Harder <radhermit@gentoo.org> ldns-1.6.16.ebuild: