@@ -6,27 +6,27 @@ DIST ldns-1.6.12.tar.gz 1057607 SHA256 b966787510a169ca0ed78f9a8a5de01fb30990957
 DIST ldns-1.6.16.tar.gz 1109941 SHA256 24b2f9cb05797170f2021ef0e0372d4b5225ee4199f0568a15589b5c524df695 SHA512 ae32abf4fc146b4f8efb7d7751b09f629d28cbcb39d9493e5c00198b862d16274bc1bf6ac68c4fe35f177184bfe71bf68e1e6461c0fe6b6d57855549b08a4515 WHIRLPOOL e48875cd70ba915808097e67940642639092b4cd6a431cf4fd29e41ccacaa34c864ff10506f5fceb936656c06d27d8bb8c9bda2a8aa2d1d955becac461b7cecf
 DIST ldns-1.6.17.tar.gz 1315403 SHA256 8b88e059452118e8949a2752a55ce59bc71fa5bc414103e17f5b6b06f9bcc8cd SHA512 5de42b4b8622591db51efb0956735deee9cd5e0bee12249a03b65c5b45d7c51bf9c2edb310ef9d7431af49aef77d968bfa2455a7dedfa80cde3d433436c83785 WHIRLPOOL 08c8a13df3dbeccd5dc5ceeb52730a61ab231e70a85524e826f9275bbcde6e09d6e2fc5234303a6bceb431d2b91f510140ce61a2b59d77afbb2759a0627c7cb7
 EBUILD ldns-1.6.12.ebuild 1766 SHA256 f7f641d1526f7a251d998d7b9ebe7314b2b025a435e4b930a34a521e6025c1e1 SHA512 3ffc2e601d9b7069ec55bfe267681b0f46e7d472695173c5b443fd1b2e8eb5183067e2eefd0f8f1a1443b178155d6f38371cc65c5af5743b32c43cb891e07e00 WHIRLPOOL 3b737c9088d8937805dbcd637628ce87c6fdb21b76eb6dec0790fe9a97aeabd8a6b02eef8abb6a409f1d2b904a7e87bf61b9657ad7e4b20abb5911439df5ddca
-EBUILD ldns-1.6.16-r1.ebuild 2097 SHA256 a04b1f0b900118d8b182c67812e1682785599cc0dc14fb4c12dc28a728d091b9 SHA512 15081a705841dba69dc43dfb54b82dbd636dc74f5811ab79fa3151980cd6dfa7803f138d49a217cda4f9daaa4ee8256bbcb75966e0590ec857e46ab54bf11a75 WHIRLPOOL 939d44120776367d81d032af28ba24d877ff867e7d7f225a44df4cf2fec2259ad0d410f77c6f2cce5ca160b7c997c96314af7eada789674dc93dbf8e6932ca0f
+EBUILD ldns-1.6.16-r1.ebuild 2161 SHA256 614b18b336997751bd04410a4e5bc8f994633a9a87242b8aead9c2838c1d7f71 SHA512 25bf30dfdde4260e1fc9733a4161c26811f85ff96d64f9d2bc22c3864bc79673fb616b7b05945d45a98a8c934cffbf95c2e1791bda63a1dd08822548cb40cec7 WHIRLPOOL 069dd63647b11a22caa92797af69fa92e206d5950ef0bc5906617414245fb956e334a5566051cd568ae734dbc22f6007a141d45e4bfe6e899f7cdd0aacff92df
 EBUILD ldns-1.6.16.ebuild 2082 SHA256 fa8a4adc4a526462062b844892d30916daa7c731833a822afc4a33dfd9df3c3a SHA512 53ce75e76c0507057ad6dd013913fe3b9026bef1f6f8b6dea60436c76dda63ef0a80acab8983484315b10a9d7eaed55a0889a003a7060ee4ba7583159cf31bd2 WHIRLPOOL ac9b9c46dad99f784376e1c5ff0dca3ec1046bf3ba371b4ff0c81f241a75524cf8d8c42a8af294bd2baca926fb6c41d9af19d8f701c1871fef6b296591e01012
-EBUILD ldns-1.6.17.ebuild 2188 SHA256 27ffbd0c3927a285365aea8eb09bb3b1c4605a63b84fca791b220a42e6e3c9dc SHA512 45f761c032a8655ac835e1a9cf04f34ddf29a84bb8eba058880d373e7808c7f99b782a719ba4dc4b8e6903b93ac87e4cf280b7b04c94a0d561704a571cd7e76d WHIRLPOOL cd99eef02dc62456897142914e7f49eb7f1a9fa6205f1f0c87b36e56de3a092ca98d194c2dc1937f2c5c2d7f5d43183c4c7de3083b818209156d6f98d88b812b
-MISC ChangeLog 8395 SHA256 1fbd75c776f5b7420c4fdb344ded84edb75876ff847063cb86e2d14ed883b62b SHA512 a5d4600c1e481fd74a331b86e27284a5663ef657deb58fe6d5c635fd328a8cda416fa1924aa6c11c0ac8107b76cf0b8e73e7a146f80d57feabbf2ffd08569caa WHIRLPOOL 7c9bbf2c089af067cc28c4741ef95561e7771cac001e7dfa956a3c233c1799f70084e17cd6933e7cbe0fdf7908b34690b8e55c048c9be0a258bbe1e2b74a7095
+EBUILD ldns-1.6.17.ebuild 2252 SHA256 c1fe971a91befcc0d29098e1696a6effb18c2ba3106be88d0ccf26158b04e2bb SHA512 ea07ac7086fa71cd27f496bcbc381a08ec90e31966ffc66e3b8f85e963d9213cb9125bd741e1be748ef171069c8f955e8dff34bd890fc2bcc9607ea5df53f55b WHIRLPOOL 7b006f73538e7c7437ec7d8e070b934d3afa25fb68bdb81f99877aafa612b04fae01806d36f6ee1cf84ce803f306f334b64bc4bbf607ac1bc8fab753add0f536
+MISC ChangeLog 8542 SHA256 31ac8d9c6d8690218121ad8340d5901f9fc58ce51fdc12cf0dab511a3e1939ae SHA512 885ec5134078bffe32248118d8aa3f5f43ea50ad7a40c909097a999efa4e0f2ae5665f37d1a8c78896a00311ecf110f25891fe46ffb7e984d77e87eb374acd01 WHIRLPOOL 59312ead49460dd70cf0b19450fea01505bdc63759a7b6d3e5974437a6edab2c9c8b854914004e3bff3a42786553c9f12770fa6b4d0fef7e26bc7ec74e09b635
 MISC metadata.xml 725 SHA256 20a40228fd9b0437b6aa3fbf4c9523a45848c07da0e8e353b401cae5e4b141fe SHA512 fe74e6cf8a13bfa7a2b112cab71b26c283fb70c5db4386badeaa0b3a337c3860439bb4a19cacfd53bca1d6b63a0c8d30590e4a3e9a67a67a9278d0a489febd51 WHIRLPOOL b257462ecc4581d32e9827b0c63e4016f2b71e1f33b2962bea3639d563e2a3e0ce483378123863184a05b0fc0344e35f79adb26d49aafd07fcc1c2ca11d23262
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTofihXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTvXXTXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOUv4QAL9UTWCsix4xX3ckEn7K9Ntz
-1IMHsQZyj3FZhyVTNuVIXNoN7KRQG1EZEI3/+nAFAwZKMNDXCxecFFdnbvHGUemf
-OgE/u3dNTqssRL3HI7mTtzPvo+XLIj0zCENnQFQHjyrBcn51NfZyZwb5MuGygdRL
-FUd9rkNwvPa4xS+OzgBGueZuqt7UWlmELKefvM98ADIHJQYnU9c4ykzUkDPHPJ2Y
-GPcOjehTw5CWPm9BW0Ujo9F9dJhbW2kW6FpeZ7iQ1Ah3CVUSrw6EHhp3D1c1aI3k
-S3QIUn0P53olf0HVz4QCIVB2CMf7I9HW0U/do72RzXrc8TPfhgbFcz3ajQOsH2nj
-rrqxHPzPG/RP+c8041g+bjqimAoCrqwOk1wwyft5moduVjt1ZfnRKDQWfFIFafVk
-kD0BIsE+TxqczuG2c/eHCf82EtREnjokTkAdiTBCH54YyDX6yeDxeCoOp/Gx6raH
-z4faP/KAPB4A39m4owi0fiXXhXDvuxS1ffHsrYyUAYjzUrdyZ60oDoYa3QYGG6N2
-WS5Ai/gLmz2pDYiK9HrfWrJ2a4D5U5mdp3lsFU86qRvWon2279tGpHnQAzmvdAUc
-ULpJdU2/IXp3OwtU5a7cZRU5zPft91IHtTeBdSHDcIGxyWPs0WzrLYcENER3CnNc
-x1AovJ0hQ7EvWGy83i7U
-=xNCO
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOPrYQAKlTpFc6sXiCNsHMWzz65VFV
+PT/gC2LBQ5orMXElYBvqr4xkFrS1sBGfm63b8jzWncI4CSfHVHVEIKWTm+MfV9va
+i7POHBIaplp8z6jWe5Xjk5lRV4dEZTUNW4DFaKGPDgeMOXGDz/E98MnPzMotl92M
+W7rHZE04F6pTB24sxcpkSjVgEfOCAFu4o+5h9jna1kcTssyVFg60Fx1g8Mlj6Viw
+d+mG2dBgjVvq/HVg/DsxX/yGUgMXXWgEo/CJy+l1oA5Ye/osfwBcH+exT7MoHcKy
+CzR1hVds/r/CA9hANA1mPS9Td/ej52/W4d2noVeapUuJl7c8p+mC1SCGigDzMRa5
+cA9bB8UHINt03O7RHXkjU5ekHr8E1sc7AdWDutWTbySkwlGOH04pdutLbmGpjGLc
+L44JAuOou4MxAAS7BcJ9IFOIVmAd4AQ5MptSoMV3z07/WrlzWAlD7wApXvmstF0P
+IZJE+KWANm4MxI+MV3FX2MLplpsIcbrx84Lx66rH7YILAynX37PPyN3RnQKk5Xny
+9DRZukY2JsWwUKq734pB7lOhvaLsV7C0IH0XUvw4RNnCuoDw5AbAdcax4YlMDZ24
+D1CZNOj+R0cMXl4pzQ2os7RkfAIRPQ3hS08hHuuMGEVqpSdijt+gfnJM1HZSFfaX
+oCBqbU0oJVdjUjkumKD0
+=NEia
 -----END PGP SIGNATURE-----
