@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/ldns
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.59 2014/06/18 20:37:50 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.60 2014/07/09 17:03:04 mgorny Exp $
+
+  09 Jul 2014; Michał Górny <mgorny@gentoo.org> ldns-1.6.16-r1.ebuild,
+  ldns-1.6.17.ebuild:
+  Add missing PYTHON_DEPS and PYTHON_REQUIRED_USE.
 
   18 Jun 2014; Michał Górny <mgorny@gentoo.org> ldns-1.6.16-r1.ebuild,
   ldns-1.6.17.ebuild:
